<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="Self Checkup"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/roboto_light"
        android:id="@+id/tv_question"
        android:layout_width="0dp"
        android:textSize="22sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="26dp"
        android:text="@string/_1_apakah_anda_mengalami_salah_satu_dari_yang_berikut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:textSize="22sp"
        android:id="@+id/tv_sub_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="26dp"
        android:padding="10dp"
        android:text="sub topik"
        android:fontFamily="@font/roboto_light"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_sub_question"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="@+id/tv_sub_question"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_question">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYes"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="#03A9F4"
            android:text="@string/ya"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="368dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            android:layout_marginStart="30dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="#009688"
            android:text="@string/tidak"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="368dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>